<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_preferencias"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/preferencias"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_web"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/abrir_pagina_web"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_acerca_de"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/acerca_de"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/logout_title" />
</menu>

